[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/example_package"
"Bug Tracker" = "https://github.com/pypa/example_package/issues"
